--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
-# This default build command adds the robots noindex directive to the site headers.
-# It is turned off for only for the production site by using [context.master] below
-# DO NOT REMOVE THIS (contact @chenopis or @sig-docs-maintainers)
 publish = "public"
-command = "hugo --enableGitInfo && cp netlify_noindex_headers.txt public/_headers"
+command = "hugo --enableGitInfo"
 
 [build.environment]
 HUGO_VERSION = "0.46"
@@ -20,7 +17,5 @@ command = "hugo --enableGitInfo -b $DEPLOY_PRIME_URL"
 command = "hugo --enableGitInfo -b $DEPLOY_PRIME_URL"
 
 [context.master]
-# This context is triggered by the `master` branch and allows search indexing
-# DO NOT REMOVE THIS (contact @chenopis or @sig-docs-maintainers)
 publish = "public"
-command = "hugo"
+command = "make production-build"
