--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,6 +3,7 @@ backend:
 
 media_folder: static/images
 public_folder: /images
+publish_mode: editorial_workflow
 
 collections:
 - name: blog
@@ -11,5 +12,5 @@ collections:
   create: true
   fields:
   - {label: Title, name: title, widget: string}
-  - {label: Draft, name: draft, widget: string, default: true}
+  - {label: Draft, name: draft, widget: boolean, default: true}
   - {label: Body, name: body, widget: markdown}
